# 07/25/blog/lib/controllers/CategoryApiController.php
@@ -11,26 +11,37 @@ class CategoryApiController extends CategoryController
      */
     public function getList(): array
     {
-        // створюємо екземпляр моделі
-        $categoriesModel = new \lib\models\CategoriesModel();
-        $categories      = $categoriesModel->getList();
-
-        // відповідь
-        $response        = [];
-
-        $response['status'] = 200;
-
-        foreach( $categories as $category )
+        try
         {
-            $response['data'][] =
+            // створюємо екземпляр моделі
+            $categoriesModel = new \lib\models\CategoriesModel();
+            $categories      = $categoriesModel->getList();
+
+            // відповідь
+            $response        = [];
+
+            $response['status'] = 200;
+
+            foreach( $categories as $category )
+            {
+                $response['data'][] =
+                [
+                    'id'    => $category->getId(),
+                    'title' => $category->getTitle(),
+                    'alias' => $category->getAlias(),
+                ];
+            }
+
+            return $response;
+        }
+        catch( \Exception $e )
+        {
+            return
             [
-                'id'    => $category->getId(),
-                'title' => $category->getTitle(),
-                'alias' => $category->getAlias(),
+                'status'    => 490,
+                'error'     => $e->getMessage()
             ];
         }
-
-        return $response;
     }
 
     /**
@@ -40,30 +51,41 @@ class CategoryApiController extends CategoryController
      */
     public function getSingle( int $id ): array
     {
-        // створюємо екземпляр моделі
-        $categoriesModel = new \lib\models\CategoriesModel();
-        $category        = $categoriesModel->getSingle( $id );
-
-        // відповідь
-        $response        = [];
-
-        if( !empty( $category ) )
+        try
         {
-            $response['status'] = 200;
+            // створюємо екземпляр моделі
+            $categoriesModel = new \lib\models\CategoriesModel();
+            $category        = $categoriesModel->getSingle( $id );
 
-            $response['data']   =
+            // відповідь
+            $response        = [];
+
+            if( !empty( $category ) )
+            {
+                $response['status'] = 200;
+
+                $response['data']   =
+                [
+                    'id'    => $category->getId(),
+                    'title' => $category->getTitle(),
+                    'alias' => $category->getAlias(),
+                ];
+            }
+            else
+            {
+                $response['status'] = 404;
+            }
+
+            return $response;
+        }
+        catch( \Exception $e )
+        {
+            return
             [
-                'id'    => $category->getId(),
-                'title' => $category->getTitle(),
-                'alias' => $category->getAlias(),
+                'status'    => 490,
+                'error'     => $e->getMessage()
             ];
         }
-        else
-        {
-            $response['status'] = 404;
-        }
-
-        return $response;
     }
 
     /**
@@ -71,61 +93,72 @@ class CategoryApiController extends CategoryController
      */
     public function create(): array
     {
-        $response = [];
-
-        $title  = $_POST['title'] ?? '';
-        $alias  = $_POST['alias'] ?? '';
-
-        if( !$this->_validateTitle( $title ) )
+        try
         {
-            $response['status'] = 411;
-            $response['error']  = $this->_error_message;
+            $response = [];
+
+            $title  = $_POST['title'] ?? '';
+            $alias  = $_POST['alias'] ?? '';
+
+            if( !$this->_validateTitle( $title ) )
+            {
+                $response['status'] = 411;
+                $response['error']  = $this->_error_message;
+                return $response;
+            }
+
+            if( !$this->_validateAlias( $alias ) )
+            {
+                $response['status'] = 412;
+                $response['error']  = $this->_error_message;
+                return $response;
+            }
+
+            // створюємо екземпляр моделі
+            $categoriesModel = new \lib\models\CategoriesModel();
+
+            // перевіряємо на існування категорії з таким же самим alias (оскільки alias це UNIQUE)
+            $result = $categoriesModel->existsByAlias( $alias );
+
+            if( $result )
+            {
+                $response['status'] = 450;
+                $response['error']  = 'Категорія з таким alias вже існує';
+                return $response;
+            }
+
+            // додаємо нову категорію
+            $result = $categoriesModel->add( $title, $alias );
+
+            if( empty( $result ) )
+            {
+                $response['status'] = 460;
+                $response['error']  = 'Сталася помилка при додаванні категорії';
+                return $response;
+            }
+
+            $response['status'] = 200;
+
+            // отримуємо категорію з БД за ID (додане значення)
+            $category        = $categoriesModel->getSingle( $result->getId() );
+
+            $response['data']   =
+            [
+                'id'    => $category->getId(),
+                'title' => $category->getTitle(),
+                'alias' => $category->getAlias(),
+            ];
+
             return $response;
         }
-
-        if( !$this->_validateAlias( $alias ) )
+        catch( \Exception $e )
         {
-            $response['status'] = 412;
-            $response['error']  = $this->_error_message;
-            return $response;
+            return
+            [
+                'status'    => 490,
+                'error'     => $e->getMessage()
+            ];
         }
-
-        // створюємо екземпляр моделі
-        $categoriesModel = new \lib\models\CategoriesModel();
-
-        // перевіряємо на існування категорії з таким же самим alias (оскільки alias це UNIQUE)
-        $result = $categoriesModel->existsByAlias( $alias );
-
-        if( $result )
-        {
-            $response['status'] = 450;
-            $response['error']  = 'Категорія з таким alias вже існує';
-            return $response;
-        }
-
-        // додаємо нову категорію
-        $result = $categoriesModel->add( $title, $alias );
-
-        if( empty( $result ) )
-        {
-            $response['status'] = 460;
-            $response['error']  = 'Сталася помилка при додаванні категорії';
-            return $response;
-        }
-
-        $response['status'] = 200;
-
-        // отримуємо категорію з БД за ID (додане значення)
-        $category        = $categoriesModel->getSingle( $result->getId() );
-
-        $response['data']   =
-        [
-            'id'    => $category->getId(),
-            'title' => $category->getTitle(),
-            'alias' => $category->getAlias(),
-        ];
-
-        return $response;
     }
 
     /**
@@ -135,75 +168,86 @@ class CategoryApiController extends CategoryController
      */
     public function update( int $id ): array
     {
-        $response = [];
-
-        // створюємо екземпляр моделі
-        $categoriesModel = new \lib\models\CategoriesModel();
-
-        // отримуємо категорію з БД за ID
-        $category = $categoriesModel->getSingle( $id );
-
-        if( empty( $category ) )
+        try
         {
-            $response['status'] = 404;
-            $response['error']  = 'Категорії з таким ID не існує';
+            $response = [];
+
+            // створюємо екземпляр моделі
+            $categoriesModel = new \lib\models\CategoriesModel();
+
+            // отримуємо категорію з БД за ID
+            $category = $categoriesModel->getSingle( $id );
+
+            if( empty( $category ) )
+            {
+                $response['status'] = 404;
+                $response['error']  = 'Категорії з таким ID не існує';
+                return $response;
+            }
+
+            // У PHP при використанні методу PUT немає окремої суперглобальної змінної для цього.
+            // Тому тут ми її емулюємо таким чином:
+            parse_str( file_get_contents( "php://input" ), $_PUT );
+
+            $title  = $_PUT['title'] ?? '';
+            $alias  = $_PUT['alias'] ?? '';
+
+            if( !$this->_validateTitle( $title ) )
+            {
+                $response['status'] = 411;
+                $response['error']  = $this->_error_message;
+                return $response;
+            }
+
+            if( !$this->_validateAlias( $alias ) )
+            {
+                $response['status'] = 412;
+                $response['error']  = $this->_error_message;
+                return $response;
+            }
+
+            // перевіряємо на існування категорії з таким же самим alias (оскільки alias це UNIQUE), але іншим ID
+            $result = $categoriesModel->existsByAliasExceptID( $alias, $id );
+
+            if( $result )
+            {
+                $response['status'] = 450;
+                $response['error']  = 'Категорія з таким alias вже існує';
+                return $response;
+            }
+
+            // редагуємо категорію
+            $result = $categoriesModel->edit( $id, $title, $alias );
+
+            if( empty( $result ) )
+            {
+                $response['status'] = 460;
+                $response['error']  = 'Сталася помилка при редагуванні категорії';
+                return $response;
+            }
+
+            $response['status'] = 200;
+
+            // отримуємо категорію з БД за ID (оновлене значення)
+            $category        = $categoriesModel->getSingle( $id );
+
+            $response['data']   =
+            [
+                'id'    => $category->getId(),
+                'title' => $category->getTitle(),
+                'alias' => $category->getAlias(),
+            ];
+
             return $response;
         }
-
-        // У PHP при використанні методу PUT немає окремої суперглобальної змінної для цього.
-        // Тому тут ми її емулюємо таким чином:
-        parse_str( file_get_contents( "php://input" ), $_PUT );
-
-        $title  = $_PUT['title'] ?? '';
-        $alias  = $_PUT['alias'] ?? '';
-
-        if( !$this->_validateTitle( $title ) )
+        catch( \Exception $e )
         {
-            $response['status'] = 411;
-            $response['error']  = $this->_error_message;
-            return $response;
+            return
+            [
+                'status'    => 490,
+                'error'     => $e->getMessage()
+            ];
         }
-
-        if( !$this->_validateAlias( $alias ) )
-        {
-            $response['status'] = 412;
-            $response['error']  = $this->_error_message;
-            return $response;
-        }
-
-        // перевіряємо на існування категорії з таким же самим alias (оскільки alias це UNIQUE), але іншим ID
-        $result = $categoriesModel->existsByAliasExceptID( $alias, $id );
-
-        if( $result )
-        {
-            $response['status'] = 450;
-            $response['error']  = 'Категорія з таким alias вже існує';
-            return $response;
-        }
-
-        // редагуємо категорію
-        $result = $categoriesModel->edit( $id, $title, $alias );
-
-        if( empty( $result ) )
-        {
-            $response['status'] = 460;
-            $response['error']  = 'Сталася помилка при редагуванні категорії';
-            return $response;
-        }
-
-        $response['status'] = 200;
-
-        // отримуємо категорію з БД за ID (оновлене значення)
-        $category        = $categoriesModel->getSingle( $id );
-
-        $response['data']   =
-        [
-            'id'    => $category->getId(),
-            'title' => $category->getTitle(),
-            'alias' => $category->getAlias(),
-        ];
-
-        return $response;
     }
 
     /**
@@ -213,26 +257,37 @@ class CategoryApiController extends CategoryController
      */
     public function delete( int $id ): array
     {
-        $response = [];
-
-        // створюємо екземпляр моделі
-        $categoriesModel = new \lib\models\CategoriesModel();
-
-        // отримуємо категорію з БД за ID
-        $category = $categoriesModel->getSingle( $id );
-
-        if( empty( $category ) )
+        try
         {
-            $response['status'] = 404;
-            $response['error']  = 'Категорії з таким ID не існує';
+            $response = [];
+
+            // створюємо екземпляр моделі
+            $categoriesModel = new \lib\models\CategoriesModel();
+
+            // отримуємо категорію з БД за ID
+            $category = $categoriesModel->getSingle( $id );
+
+            if( empty( $category ) )
+            {
+                $response['status'] = 404;
+                $response['error']  = 'Категорії з таким ID не існує';
+                return $response;
+            }
+
+            // видаляємо категорію з БД за ID
+            $categoriesModel->delete( $id );
+
+            $response['status'] = 200;
+
             return $response;
         }
-
-        // видаляємо категорію з БД за ID
-        $categoriesModel->delete( $id );
-
-        $response['status'] = 200;
-
-        return $response;
+        catch( \Exception $e )
+        {
+            return
+            [
+                'status'    => 490,
+                'error'     => $e->getMessage()
+            ];
+        }
     }
 }
